First version with working attendance tracking, styling in progress

--- a/events/templates/events/rsvp.html
+++ b/events/templates/events/rsvp.html
@@ -1,5 +1,10 @@
 <html>
 <body>
 You RSVP'd
+<br></br>
+<br>People Attending:</br>
+{% for peeps in people %}
+<p>{{peeps.first_name}}</p>
+{% endfor %}
 </body>
 </html>
