--- a/events/templates/events/display_events.html
+++ b/events/templates/events/display_events.html
@@ -1,19 +1,36 @@
 <html>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<title>Alumni Events</title>
 </head>
-<body> 
+<body>
 	<h2>Events Page<h2>
 	{% for event in events %}
 		<h3>{{ event.title }}</h3>
+		<p>{{ event.location }}</p>
+		<p>{{ event.date }}</p>
 		<p>{{ event.description }}</p>
+		<p>{{ event.time }}</p>
 		<form action="/rsvp/" method="POST">
 		{% csrf_token %}
-			<input type="text" value="First Name" name="first_name">
-			<input type="text" value="Last Name" name="last_name">
-			
+			<input type="text" placeholder="First Name" name="first_name">
+			<input type="text" placeholder="Last Name" name="last_name">
+			<input type="hidden" placeholder="{{ event.id }}" name="id">
 			<input type="submit" value="RSVP">
 		</form>
 	{% endfor %}
+	<h2>Add Event<h2>
+		<form action="/add_event/" method="POST">
+		{% csrf_token %}
+			<input type="text" placeholder="First Name" name="first_name">
+			<input type="text" placeholder="Last Name" name="last_name">
+			<input type="text" placeholder="Title" name="title">
+			<input type="text" placeholder="Location" name="location">
+			<input type="date" id="start" name="date">
+			<input type="text" placeholder="Description" name="description">
+			<input type="time" id="appt-time" name="time">
+			<input type="submit" value="RSVP">
+		</form>
 </body>
 </html>
