--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
+  <a href="/alumni"><button>View/Post Events</button></a>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
