--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,10 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
+  {% if request.user.is_superuser %}
+    <a href="/admin"><button>Admin Dashboard</button></a>
+  {% endif %}
+  <p><a href="{% url 'logout' %}">logout</a></p>
   <a href="/alumni"><button>View/Post Events</button></a>
 {% else %}
   <p>You are not logged in</p>
