--- a/events/templates/events/display_events.html
+++ b/events/templates/events/display_events.html
@@ -16,7 +16,7 @@
 		{% csrf_token %}
 			<input type="text" placeholder="First Name" name="first_name">
 			<input type="text" placeholder="Last Name" name="last_name">
-			<input type="hidden" placeholder="{{ event.id }}" name="id">
+			<input type="hidden" value="{{ event.id }}" name="id">
 			<input type="submit" value="RSVP">
 		</form>
 	{% endfor %}
