More styling applied to admin dashboard and events page

--- a/events/templates/events/display_events.html
+++ b/events/templates/events/display_events.html
@@ -1,36 +1,37 @@
-<html>
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% extends 'base.html' %}
 
-	<title>Alumni Events</title>
-</head>
-<body>
-	<h2>Events Page<h2>
-	{% for event in events %}
-		<h3>{{ event.title }}</h3>
-		<p>{{ event.location }}</p>
-		<p>{{ event.date }}</p>
-		<p>{{ event.description }}</p>
-		<p>{{ event.time }}</p>
-		<form action="/rsvp/" method="POST">
-		{% csrf_token %}
-			<input type="text" placeholder="First Name" name="first_name">
-			<input type="text" placeholder="Last Name" name="last_name">
-			<input type="hidden" value="{{ event.id }}" name="id">
-			<input type="submit" value="RSVP">
-		</form>
-	{% endfor %}
-	<h2>Add Event<h2>
-		<form action="/add_event/" method="POST">
-		{% csrf_token %}
-			<input type="text" placeholder="First Name" name="first_name">
-			<input type="text" placeholder="Last Name" name="last_name">
-			<input type="text" placeholder="Title" name="title">
-			<input type="text" placeholder="Location" name="location">
-			<input type="date" id="start" name="date">
-			<input type="text" placeholder="Description" name="description">
-			<input type="time" id="appt-time" name="time">
-			<input type="submit" value="RSVP">
-		</form>
-</body>
-</html>
+{% block title %}Alumni Events{% endblock %}
+
+{% block content %}
+		<h2>Events Page<h2>
+		{% for event in events %}
+		<div class="card">
+			<h3 class="card-header">{{ event.title }}</h5>
+			<div class="card-body">
+				<h4 class="card-title">{{ event.location }}</h5>
+				<h6>{{ event.date }}</h6>
+				<h6>{{ event.time }}</h6>
+				<h6 class="card-text">{{ event.location }}</h6>
+				<form action="/rsvp/" method="POST">
+					{% csrf_token %}
+					<input type="text" placeholder="First Name" name="first_name">
+					<input type="text" placeholder="Last Name" name="last_name">
+					<input type="hidden" value="{{ event.id }}" name="id">
+					<input type="submit" value="RSVP" class="btn btn-primary">
+				</form>
+			</div>
+		</div>
+		{% endfor %}
+		<h2>Add Event<h2>
+			<form action="/add_event/" method="POST">
+			{% csrf_token %}
+				<input type="text" placeholder="First Name" name="first_name">
+				<input type="text" placeholder="Last Name" name="last_name">
+				<input type="text" placeholder="Title" name="title">
+				<input type="text" placeholder="Location" name="location">
+				<input type="date" id="start" name="date">
+				<input type="text" placeholder="Description" name="description">
+				<input type="time" id="appt-time" name="time">
+				<input type="submit" value="RSVP">
+			</form>
+{% endblock %}
