--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,24 @@
 <!-- templates/base.html -->
 
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css" />
   <meta charset="utf-8">
   <title>{% block title %}SCU Alumni Events{% endblock %}</title>
 </head>
-<body>
-  <main>
+  <div id="branding" class="row">
+    <div class="col-auto mr-auto">
+      <img id="brand_logo"src="{% static 'Logo.png' %}" alt="My image">
+    </div>
+    <div class="col-auto">
+      <h1 class="align-middle">Engagement Recording System</h1>
+    </div>
+  </div>
+  <main class="py-5 col-md-12">
     {% block content %}
     {% endblock %}
   </main>
