--- a/events/templates/events/display_events.html
+++ b/events/templates/events/display_events.html
@@ -49,8 +49,7 @@
 			<div class="card">
 				<h3 class="card-header">{{ event.title }}</h3>
 				<div class="card-body">
-					<h4 class="card-title">{{ event.location }}</h4>
-					<h6>{{ event.date }}</h6>
+					<h4 class="card-title">{{ event.date }}</h4>
 					<h6>{{ event.time }}</h6>
 					<h6 class="card-text">{{ event.location }}</h6>
 					<h6 class="card-text">{{ event.description }}</h6>
