--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,6 +5,7 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block extrastyle %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <style>
 #header{ background-color: #800303; border-bottom: solid 3px #FFFFFF; height:auto;}
 
@@ -19,6 +20,7 @@ a.section:link, a.section:visited { color: #ffc; }
 </style>
 {% endblock %}
 
+<!-- Branding -->
 {% block branding %}
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
