correct admin change attributes/link logo to homepage

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -92,5 +92,12 @@
 </div>
 <!-- END Container -->
 
+<script>
+window.onload = function() {
+    document.getElementById("id_numberAttendees").disabled = true;
+    document.getElementById("id_numberAttendees").removeAttribute("type");
+}
+</script>
+
 </body>
 </html>
