--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <div id="branding" class="container-fluid sticky-top shadow">
       <div class="row align-items-center px-5">
         <div class="col-auto mr-auto py-3">
-          <img id="brand_logo"src="{% static 'Logo.png' %}" alt="My image">
+          <a href="{% url 'home' %}"><img id="brand_logo"src="{% static 'Logo.png' %}" alt="My image"></a>
         </div>
         <div class="col-auto">
           <h1 class="align-middle">Engagement Recording System</h1>
