--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,3 +1,8 @@
+<!-- base_site.html -->
+
+<!-- Clone of Django source admin base_site.html
+ to allow for overriding stock html layout -->
+
 {% extends "admin/base.html" %}
 
 {% load static %}
