--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,5 +1,5 @@
 <!-- Replacement html file for django/contrib/admin/templates/admin/index.html -->
-<!-- By replacing instead of extending, we can create our own bootstrap layout -->
+<!-- By replacing instead of extending, we can create a cleaner, simpler bootstrap layout -->
 
 {% extends "admin/base_site.html" %}
 {% load i18n static %}
