--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -13,7 +13,7 @@
     {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive_rtl.css" %}">{% endif %}
 {% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
-<!-- Add customized Bootstrap 4 Build and our own magic sauce -->
+<!-- Add customized Bootstrap 4 Build and our own css -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css" >
 <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css" >
 </head>
